# ne

./: .gitignore  BUGS.jp  CHANGES.jp  COPYING.jp  HISTORY.jp  INSTALL.jp  Makefile.in  README.jp  README.md  TODO.jp  configure  configure.in  mkinstalldirs
doc/: Makefile.in  ne.cat
etc/: Makefile.in  key.eff  key.ele  key.system  key.vz  nerc  nerc.ele  term  term.kterm  term.rxvt
lib/: 00_todo  BSD-copyright.jp  Makefile.in  README.jp  config.h.in  configure  configure.in  generic.c  generic.h  hash.c  hash.h  misc.c  regexp.c  regexp.h  term.c  term.h  term_inkey.c  tparm.c
lib/ruby/: extconf.rb.in  term.c  test.rb
ne_jump_brace/: jump_brace.diff  readme.txt
old_doc/: HISTORY  Install  Makefile.in  NE.DOC  README  TECHKNOW  ne.cat  ne.man  nxrc
src/: 00_next  00_todo  Makefile.in  block.c  config.h.in  crt.c  cursor.c  disp.c  disp.h  ed.h  file.c  filer.c  filer.h  function.h  hearderr.c  input.c  iskanji.c  kanji.h  keyf.c  line.c  lineedit.c  list.c  menu.c  ne.1.in  ne.c  ne_en.1  profile.c  search.c  setopt.c  sh.h  sh_make.c
