dnl Process this file with autoconf to produce a configure script.
AC_INIT(src/ne.c)
AC_CONFIG_HEADER(src/config.h)
AC_CONFIG_SUBDIRS(lib)

VERSION=3.06
AC_SUBST(VERSION)


dnl Checks for programs.
AC_PROG_CC
AC_PROG_MAKE_SET
AC_PROG_INSTALL


dnl Checks for libraries.
AC_CHECK_LIB(termcap, tgetent,,
AC_CHECK_LIB(ncurses, tgetent,,
AC_CHECK_LIB(curses, tgetent)))


dnl Checks for header files.
AC_HEADER_DIRENT
AC_HEADER_STDC
AC_HEADER_SYS_WAIT
AC_CHECK_HEADERS(fcntl.h unistd.h sys/time.h sys/file.h)
AC_CHECK_HEADERS(stdarg.h varargs.h)
AC_CHECK_HEADERS(regex.h)
AC_CHECK_HEADERS(sys/utsname.h)


dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_OFF_T
AC_TYPE_SIZE_T
AC_TYPE_PID_T
AC_STRUCT_TM
AC_HEADER_TIME


dnl Checks for library functions.
AC_PROG_GCC_TRADITIONAL
AC_TYPE_SIGNAL
AC_FUNC_STRFTIME
AC_FUNC_VPRINTF
dnl AC_FUNC_ALLOCA
AC_CHECK_FUNCS(getcwd mkdir rmdir select strerror strtol uname)



AC_OUTPUT(Makefile etc/Makefile src/Makefile old_doc/Makefile doc/Makefile src/ne.1)
